# nextspace

./: .gitignore  FREEBSD-Developer-Preview-README.md  README.md
Applications/Login/: GNUmakefile.preamble
Applications/Preferences/: GNUmakefile  GNUmakefile.preamble
Applications/Preferences/Modules/Display/: GNUmakefile.preamble
Applications/Preferences/Modules/Font/: Font.m
Applications/Preferences/Modules/Keyboard/: GNUmakefile.preamble
Applications/Terminal/: Defaults.h  Defaults.m  GNUmakefile  TerminalApplication.h  TerminalApplication.m  TerminalParser_Linux.m  TerminalView.m  main.m
Applications/TextEdit/: Document.m  GNUmakefile.preamble  Preferences.m
Applications/Workspace/: Controller+NSWorkspace.m  Controller.h  Controller.m  GNUmakefile.postamble  GNUmakefile.preamble  Launcher.m  RecyclerIcon.h  RecyclerIcon.m  Workspace+WM.m  Workspace_main.m
Applications/Workspace/Inspectors/: GNUmakefile.preamble
Applications/Workspace/Preferences/Desktops/: GNUmakefile.preamble
Applications/Workspace/Resources/: app-freebsd-48.tiff
Applications/Workspace/Tools/FileMover/: Copy.m
Applications/Workspace/Viewers/: FileViewer.m  ShelfView.m
Applications/Workspace/Viewers/BrowserViewer/: GNUmakefile.preamble
Applications/Workspace/WM/: application.c  defaults.h  desktop.c  dock.c  dock.h  event.c  osdep_bsd.c  screen.c  wmspec.c  xrandr.c
Applications/Workspace/WM/core/: file_utils.c  wevent.c
Core/: nextspace-freebsd.fsl
Core/os_files/etc/devd/: nextspace.conf
Core/os_files/etc/profile.d/: freebsd-nextspace.sh
Documentation/Developer/: UPSHIFTED_RECYCLER_APPICON.md
Frameworks/DesktopKit/: GNUmakefile.preamble  NXTNumericField.m
Frameworks/DesktopKit/Resources/: 25-nextspace-fonts.conf
Frameworks/SoundKit/: GNUmakefile
Frameworks/SystemKit/: GNUmakefile.preamble  OSEDisplay.h  OSEDisplay.m  OSEKeyboard.m  OSEScreen.m
Frameworks/SystemKit/FreeBSD/: OSEFileSystem_FreeBSD.m
Installer/FreeBSD/: 1_build_libcorefoundation.sh  2_build_libobjc2.sh  3_build_core.sh  3_build_tools-make.sh  4_build_libwraster.sh  5_build_libs-base.sh  6_build_libs-gui.sh  7_build_libs-back.sh  8_build_Frameworks.sh  9_build_Applications.sh  README.md  freebsd-14.deps.sh
Installer/FreeBSD/patches/: NSRunLoop.m.fixed  freebsd  pkg-plist
Libraries/gnustep/: gdomap
Libraries/gnustep/back-art/Source/: GNUmakefile.preamble
Libraries/gnustep/freebsd/: gdomap
Libraries/libwraster/: CMakeLists.txt
Libraries/libwraster/cmake/modules/: FindGraphicsMagick.cmake
Packaging/: environment.sh  install_environment-freebsd.sh
Packaging/Sources/: 0_build_libdispatch.sh  1_build_libcorefoundation.sh  2_build_libobjc2.sh  3_build_core.sh  3_build_tools-make.sh  4_build_libwraster.sh  5_build_libs-base.sh  6_build_libs-gui.sh  7_build_libs-back.sh  8_build_Frameworks.sh  9_build_Applications.sh  README.md  build_formula.md  freebsd-14.deps.sh  freebsd-15.deps.sh  freebsd.deps.sh  freebsd_nextspace_install.sh  setup_user_home.sh
Packaging/Sources/freebsd_patches/: 0001-CoreFoundation_RunLoop.subproj_CFFileDescriptor.h.patch
Tests/Workspace_main/: Makefile.test_cfdescriptor  README.test_cfdescriptor.md  test_cfdescriptor.c
docs/reference/: freebsd-WMState.plist  freebsd-larger-font-display-NSGlobalDomain.plist
docs/reference/freebsd-unpriv-HOME-Library-Preferences-Dir/: NSGlobalDomain.plist  Terminal.plist  Workspace.plist
my-Frameworks/DesktopKit/: NXTNumericField.m
my-Frameworks/SystemKit/: GNUmakefile.preamble  OSEDisplay.m  OSEFileSystem.h  OSEHALAdaptor.m.disabled  OSEMediaManager.m
my-Frameworks/SystemKit/FreeBSD/: OSEFileSystem_FreeBSD.m
(+6 files in other folders)
